--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+    <section>
+    <main class="header">
+        <h1>Horiseon</h1>
         <div>
             <ul>
                 <li>
@@ -23,8 +24,12 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </main>
+    </section>
+    <section>
     <div class="hero"></div>
+    </section>
+    <section>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -48,6 +53,8 @@
             </p>
         </div>
     </div>
+    </section>
+    <section>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +78,7 @@
             </p>
         </div>
     </div>
+</section>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
